--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Spectral by HTML5 UP</title>
+	    <link rel="icon" type="image/x-icon" href="images/favicon-32x32.png" />
+		<title>Proyectos de Mecatrónica - FI - UNLZ</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,131 +18,168 @@
 		<!-- Page Wrapper -->
 			<div id="page-wrapper">
 
-				<!-- Header 
-					<header id="header" class="alt">
-						<h1><a href="index.html">Spectral</a></h1>
-						<nav id="nav">
-							<ul>
-								<li class="special">
-									<a href="#menu" class="menuToggle"><span>Menu</span></a>
-									<div id="menu">
-										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
-										</ul>
-									</div>
-								</li>
-							</ul>
-						</nav>
-					</header>
--->
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Spectral</h2>
-							<div class="image"><img src="images/unlz.png" alt="" /></div>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net">HTML5 UP</a>.</p>
+							<h2>Proyectos de Mecatrónica</h2>
+							<div><img class="image" src="images/unlz.png" alt="Logo FI - UNLZ" style="width:20%"/></div>
+							<p>
+                Bienvenido a la vitrina de proyectos de nuestros alumnos de FI - UNLZ. Explora innovaciones que abarcan desde ensayos nucleares hasta robots autónomos, todo disponible en GitHub.
+              </p>
 							<ul class="actions special">
-								<li><a href="#" class="button primary">Activate</a></li>
+								<li><a href="#one" class="button primary">Ver Proyectos</a></li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<a href="#one" class="more scrolly">Descubrir Más</a>
 					</section>
 
-				<!-- One -->
+				<!-- One: Introducción -->
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Innovación y Tecnología en Acción</h2>
+								<p>
+                  Descubre los proyectos destacados desarrollados por nuestros estudiantes. Cada trabajo refleja creatividad, rigor técnico y una visión aplicada a la mecatrónica moderna.
+                </p>
 							</header>
 							<ul class="icons major">
-								<li><span class="icon fa-gem major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon solid fa-code major style3"><span class="label">Dolor</span></span></li>
+								<li><span class="icon fa-gem major style1"><span class="label">Destacados</span></span></li>
 							</ul>
 						</div>
 					</section>
 
-				<!-- Two -->
+				<!-- Two: Proyectos Destacados (Featured) -->
 					<section id="two" class="wrapper alt style2">
+						<!-- 1. MecaChess Robotic Arm -->
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/pic01.jpg" alt="MecaChess Robotic Arm" /></div>
+							<div class="content">
+								<h2>
+                  <a href="https://github.com/GuillermoDuarte888/MecaChess-Robotic-Arm" target="_blank">
+                    MecaChess Robotic Arm
+                  </a>
+                </h2>
+								<p>
+                    Brazo robótico de 4 grados de libertad diseñado para jugar ajedrez de forma autónoma, integrando Stockfish y controlado por Arduino.
+                  </p>
 							</div>
 						</section>
+						<!-- 2. Escáner 3D por Triangulación Láser -->
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/pic02.jpg" alt="Escáner 3D por Triangulación Láser" /></div>
+							<div class="content">
+								<h2>
+                  <a href="https://github.com/alex20022000/Escaner_3D_por_Triangulacion_Laser" target="_blank">
+                    Escáner 3D por Triangulación Láser
+                  </a>
+                </h2>
+								<p>
+                    Proyecto en Python que utiliza la técnica de triangulación láser para generar modelos 3D precisos.
+                  </p>
 							</div>
 						</section>
+						<!-- 3. DIY Self Balancing Robot -->
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/pic03.jpg" alt="DIY Self Balancing Robot" /></div>
+							<div class="content">
+								<h2>
+                  <a href="https://github.com/GastonADiaz/DIY-Self-Balancing-robot-" target="_blank">
+                    DIY Self Balancing Robot
+                  </a>
+                </h2>
+								<p>
+                    Robot autoequilibrado de dos ruedas usando Arduino Nano, MPU6050 y motores paso a paso para un control dinámico.
+                  </p>
 							</div>
 						</section>
 					</section>
 
-				<!-- Three -->
+				<!-- Three: Más Proyectos Innovadores -->
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Más Proyectos Innovadores</h2>
+								<p>
+                  Explora otros trabajos que destacan por su creatividad y aplicación práctica en el campo de la mecatrónica.
+                </p>
 							</header>
 							<ul class="features">
 								<li class="icon fa-paper-plane">
-									<h3>Arcu accumsan</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>
+                    <a href="https://github.com/AriKnaidel/Ensayo-De-Estanqueidad-y-Desplazamiento-CNE" target="_blank">
+                      Ensayo de Estanqueidad y Desplazamiento - CNE
+                    </a>
+                  </h3>
+									<p>
+                    Práctica Profesional Supervisada realizada en la Central Nuclear Embalse. Explora su metodología innovadora.
+                  </p>
 								</li>
 								<li class="icon solid fa-laptop">
-									<h3>Ac Augue Eget</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>
+                    <a href="https://github.com/pedrotagliani/dots-and-boxes-robot" target="_blank">
+                      Dots and Boxes Robot
+                    </a>
+                  </h3>
+									<p>
+                    Robot inteligente diseñado para jugar al clásico juego de Puntos y Cajas, analizando estrategias y optimizando jugadas.
+                  </p>
 								</li>
 								<li class="icon solid fa-code">
-									<h3>Mus Scelerisque</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>
+                    <a href="https://github.com/pedrotagliani/self-balancing-robot-with-marker-detection" target="_blank">
+                      Self Balancing Robot with Marker Detection
+                    </a>
+                  </h3>
+									<p>
+                    Proyecto enfocado en desarrollar un robot balanceador que reacciona ante marcadores ArUco, integrando avanzadas técnicas de control.
+                  </p>
 								</li>
 								<li class="icon solid fa-headphones-alt">
-									<h3>Mauris Imperdiet</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>
+                    <a href="https://github.com/leanlean-o/Analisis-de-fallas-en-placas-electronicas" target="_blank">
+                      Análisis de Fallas en Placas Electrónicas
+                    </a>
+                  </h3>
+									<p>
+                    Dispositivo mecatrónico que inspecciona placas mediante una cámara y un robot Scara para detectar fallas con precisión.
+                  </p>
 								</li>
 								<li class="icon fa-heart">
-									<h3>Aenean Primis</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>
+                    <a href="https://github.com/CristianMustone/3D-Printer-Robotic-Arm" target="_blank">
+                      3D Printer Robotic Arm
+                    </a>
+                  </h3>
+									<p>
+                    Brazo robótico casero que funciona como una impresora 3D, combinando ingeniería y diseño para crear prototipos innovadores.
+                  </p>
 								</li>
 								<li class="icon fa-flag">
-									<h3>Tortor Ut</h3>
-									<p>Augue consectetur sed interdum imperdiet et ipsum. Mauris lorem tincidunt nullam amet leo Aenean ligula consequat consequat.</p>
+									<h3>
+                    <a href="https://github.com/EzequielRodrigoPonce/Dosificadora-AccuFill-FI-UNLZ" target="_blank">
+                      Dosificadora AccuFill FI-UNLZ
+                    </a>
+                  </h3>
+									<p>
+                    Dosificadora peristáltica desarrollada para el proyecto de Ingeniería Mecatrónica, integrando sistemas de control de alta precisión.
+                  </p>
 								</li>
 							</ul>
 						</div>
 					</section>
 
-				<!-- CTA -->
+				<!-- CTA: Llamado a la acción -->
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<h2>Descubre más proyectos y colabora</h2>
+								<p>
+                  Visita nuestros repositorios en GitHub para conocer en detalle cada proyecto y contribuir al avance de la ingeniería mecatrónica.
+                </p>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="#" class="button fit primary">Activate</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="https://github.com/UNLZ-FI" class="button fit primary" target="_blank">Ver GitHub</a></li>
+								<li><a href="mailto:ppsmecatronica@ingenieria.unlz.edu.ar" class="button fit">Contacto</a></li>
 							</ul>
 						</div>
 					</section>
@@ -156,7 +194,8 @@
 							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>Ing. Cristian Leandro Lukaszewicz</li>
+              <li>Diseño Base: <a href="http://html5up.net">HTML5 UP</a></li>
 						</ul>
 					</footer>
 
