--- a/index.html
+++ b/index.html
@@ -186,6 +186,7 @@
 
 				<!-- Footer -->
 					<footer id="footer">
+					<!-- 
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
@@ -193,6 +194,7 @@
 							<li><a href="#" class="icon brands fa-dribbble"><span class="label">Dribbble</span></a></li>
 							<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
+						Footer -->
 						<ul class="copyright">
 							<li>Ing. Cristian Leandro Lukaszewicz</li>
               <li>Diseño Base: <a href="http://html5up.net">HTML5 UP</a></li>
