--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 					<section id="banner">
 						<div class="inner">
 							<h2>Proyectos de Mecatrónica</h2>
-							<div><img class="image" src="images/unlz.png" alt="Logo FI - UNLZ" style="width:20%"/></div>
+							<div>
+							<img class="image" src="images/unlz.png" alt="Logo FI - UNLZ" style="width: 400px; max-width: 80%;">
+							</div>
 							<p>
                 Bienvenido a la vitrina de proyectos de nuestros alumnos de FI - UNLZ. Explora innovaciones que abarcan desde ensayos nucleares hasta robots autónomos, todo disponible en GitHub.
               </p>
